--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "proyecto-api",
   "version": "1.0.0",
   "description": "Proyecto API final",
-  "main": "index.js",
+  "exports": "./index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
